Fix horizontal scrolling bug

--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html, body {
+    max-width: 100%;
+}
+
 body {
-    width: 100vw;
     height: 100vh;
     display: flex;
 }
